# LikeMind

./: Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json
backend/: Cargo.toml
backend/src/: lib.rs  main.rs
backend/src/db/: jobs.rs  mod.rs  prelude.rs  user_session.rs  users.rs
backend/src/routes/: authguard.rs  check.rs  db_get.rs  db_post.rs  db_query.rs  login.rs  logout.rs  mod.rs  retrieve_cookie.rs  set_cooke.rs  sign_up.rs  test.rs  validation.rs  x.rs  yes.rs
backend/src/utils/: jwt.rs  mod.rs  password.rs  returns.rs
database/: init.sql
src/components/Auth/: LS.tsx  Login.tsx  SignUp.tsx
src/components/HeaderFolder/: CreateProject.tsx  Headbar.tsx  logout.tsx
src/components/HomePageFolder/: CustomStyles.css  Footer.tsx  Homepage.tsx  Project.tsx  ProjectItem.tsx  newidea.tsx  scroll.css
src/components/JobsFolder/: Jobs.tsx
src/components/Notifications/: authNotifs.tsx
src/components/ProfileFolder/: Bio.tsx  Prof_Utils.ts  Profile.tsx  SocialMedia.tsx  UserBounties.tsx  trial.tsx
src/pages/: auth.astro  index.astro  jobspage.astro  profilepage.astro  trendingpage.astro
