[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.1"
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
jsonwebtoken = "9.2.0"
sea-orm = { version = "0.12.9", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
serde = { version = "1.0.193", features = ["derive"] }
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.5.0", features = ["cors"] }
uuid = { version = "1.6.1", features = ["v4"] }
argon2 = {version = "0.5.2"} 
rand_core = { version = "0.6.4", features = ["getrandom"] }
axum-extra = { version = "0.9.0", features = ["cookie", "protobuf", "typed-header"] }
chrono = "0.4.31"
